@@ -26,6 +26,8 @@ use Xmf\Module\Admin;
 use XoopsModules\About;
 use XoopsModules\About\Helper;
 
+/** @var Helper $helper */
+
 require_once dirname(__DIR__) . '/include/common.php';
 
 $helper = Helper::getInstance();
