@@ -2,11 +2,6 @@
 
 namespace XoopsModules\About;
 
-use XoopsObject;
-
-
-
-
 /**
  * About
  *
@@ -25,37 +20,36 @@ use XoopsObject;
  * @author         Mengjue Shao <magic.shao@gmail.com>
  * @author         Susheng Yang <ezskyyoung@gmail.com>
  */
-
 /**
  * Class Page
  */
-class Page extends XoopsObject
+class Page extends \XoopsObject
 {
     /**
      * Page constructor.
      */
     public function __construct()
     {
-        $this->initVar('page_id', XOBJ_DTYPE_INT, null, false);
-        $this->initVar('page_pid', XOBJ_DTYPE_INT, 0);
-        $this->initVar('page_title', XOBJ_DTYPE_TXTBOX, '');
-        $this->initVar('page_menu_title', XOBJ_DTYPE_TXTBOX, '');
-        $this->initVar('page_image', XOBJ_DTYPE_TXTBOX, '');
-        $this->initVar('page_text', XOBJ_DTYPE_TXTBOX, '');
-        $this->initVar('page_author', XOBJ_DTYPE_TXTBOX, '');
-        $this->initVar('page_pushtime', XOBJ_DTYPE_INT);
-        $this->initVar('page_blank', XOBJ_DTYPE_INT, 0);
-        $this->initVar('page_menu_status', XOBJ_DTYPE_INT, 0);
-        $this->initVar('page_type', XOBJ_DTYPE_INT, 0);
-        $this->initVar('page_status', XOBJ_DTYPE_INT, 0);
-        $this->initVar('page_order', XOBJ_DTYPE_INT, 0);
+        $this->initVar('page_id', \XOBJ_DTYPE_INT, null, false);
+        $this->initVar('page_pid', \XOBJ_DTYPE_INT, 0);
+        $this->initVar('page_title', \XOBJ_DTYPE_TXTBOX, '');
+        $this->initVar('page_menu_title', \XOBJ_DTYPE_TXTBOX, '');
+        $this->initVar('page_image', \XOBJ_DTYPE_TXTBOX, '');
+        $this->initVar('page_text', \XOBJ_DTYPE_TXTBOX, '');
+        $this->initVar('page_author', \XOBJ_DTYPE_TXTBOX, '');
+        $this->initVar('page_pushtime', \XOBJ_DTYPE_INT);
+        $this->initVar('page_blank', \XOBJ_DTYPE_INT, 0);
+        $this->initVar('page_menu_status', \XOBJ_DTYPE_INT, 0);
+        $this->initVar('page_type', \XOBJ_DTYPE_INT, 0);
+        $this->initVar('page_status', \XOBJ_DTYPE_INT, 0);
+        $this->initVar('page_order', \XOBJ_DTYPE_INT, 0);
         //$this->initVar('page_url', XOBJ_DTYPE_TXTBOX,"");
-        $this->initVar('page_index', XOBJ_DTYPE_INT, 0);
-        $this->initVar('page_tpl', XOBJ_DTYPE_TXTBOX, '');
-        $this->initVar('dohtml', XOBJ_DTYPE_INT, 1);
-        $this->initVar('dosmiley', XOBJ_DTYPE_INT, 0);
-        $this->initVar('doxcode', XOBJ_DTYPE_INT, 0);
-        $this->initVar('doimage', XOBJ_DTYPE_INT, 0);
-        $this->initVar('dobr', XOBJ_DTYPE_INT, 0);
+        $this->initVar('page_index', \XOBJ_DTYPE_INT, 0);
+        $this->initVar('page_tpl', \XOBJ_DTYPE_TXTBOX, '');
+        $this->initVar('dohtml', \XOBJ_DTYPE_INT, 1);
+        $this->initVar('dosmiley', \XOBJ_DTYPE_INT, 0);
+        $this->initVar('doxcode', \XOBJ_DTYPE_INT, 0);
+        $this->initVar('doimage', \XOBJ_DTYPE_INT, 0);
+        $this->initVar('dobr', \XOBJ_DTYPE_INT, 0);
     }
 }
