@@ -29,9 +29,6 @@ require_once dirname(__DIR__, 2) . '/mainfile.php';
 
 require_once __DIR__ . '/include/common.php';
 
-$moduleDirName = basename(__DIR__);
-$moduleDirNameUpper = mb_strtoupper($moduleDirName);
-
 //$helper = \XoopsModules\AboutHelper::getInstance();
 
 $helper->loadLanguage('modinfo');
