@@ -24,8 +24,8 @@ require_once __DIR__ . '/preloads/autoloader.php';
 
 $moduleDirName = basename(__DIR__);
 
-$modversion['version']       = 1.06;
-$modversion['module_status'] = 'Final';
+$modversion['version']       = 1.07;
+$modversion['module_status'] = 'Beta 1';
 $modversion['release_date']  = '2021/01/26';
 $modversion['name']          = _MI_ABOUT_NAME;
 $modversion['description']   = _MI_ABOUT_DESC;
